scripts updated with optimisation logic in graal scripts